Closed Bug 1880226 Opened 2 years ago Closed 2 years ago

[win] A Windows icon is displayed inside the About Firefox Nightly Window

Categories

(Core :: Widget: Win32, defect)

Desktop
Windows
defect

Tracking

()

VERIFIED FIXED
124 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox122 --- unaffected
firefox123 --- unaffected
firefox124 --- verified

People

(Reporter: atrif, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files, 1 obsolete file)

Attached image image.png

Found in

  • 124.0a1 (2024-02-13)

Affected versions

  • 124.0a1 (2024-02-13)

Tested platforms

  • Affected platforms: Windows 10x64
  • Unaffected platforms: macOS 12, Ubuntu 22

Steps to reproduce

  1. Open App Menu > Help > About Nightly.

Expected result

  • No icon is displayed.

Actual result

  • A Windows icon is displayed.

Regression range

Additional notes

  • Attached a screenshot.
Flags: needinfo?(emilio)

This restores the behavior pre-patch.

Bug 1878037 removed this flag because it didn't affect borders, as
documented in MSDN:

https://learn.microsoft.com/en-us/windows/win32/winmsg/extended-window-styles

But apparently it has other side effects like suppressing the icon (?).

Assignee: nobody → emilio
Status: NEW → ASSIGNED

This changes behavior (keeps the icon, but fixes it), but I think this
is better / more consistent, and avoids relying on mis-documented window
style flags in MSDN.

Slight preference for comment 2.

Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a5cff8819206 Approach 1: Keep WS_EX_DLGMODALFRAME for dialogs. r=win-reviewers,rkraesig
Blocks: 1880394

Comment on attachment 9380299 [details]
Bug 1880226 - Approach 2 - Give the icon to the dialog window class. r=#win-reviewers

Revision D201894 was moved to bug 1880394. Setting attachment 9380299 [details] to obsolete.

Attachment #9380299 - Attachment is obsolete: true
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 124 Branch

Verified fixed with Firefox 124.0a1 (2024-02-15) on Windows 10x64. The icon is no longer displayed inside the About Firefox window and profile creation windows.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: