Bug 1880226 - Approach 1: Keep WS_EX_DLGMODALFRAME for dialogs. r=win-reviewers,rkraesig

This restores the behavior pre-patch.

Bug 1878037 removed this flag because it didn't affect borders, as
documented in MSDN:

  https://learn.microsoft.com/en-us/windows/win32/winmsg/extended-window-styles

But apparently it has other side effects like suppressing the icon (?).

Differential Revision: https://phabricator.services.mozilla.com/D201889